SERVER-96252 set number of orphans to zero when missing hashed shard key index on upgrade (#32188)

GitOrigin-RevId: 5432e18d6ce1fc2ebecb857bc47188dfd5dc43ba